Fix portrait image cropping

--- a/src/components/StoryCard.css
+++ b/src/components/StoryCard.css
@@ -18,6 +18,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top center;
     transition: transform 0.5s;
 }
 
